chore: Remove unused source map files and update npm dependencies

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "immer": "^9.0.21",
     "input-otp": "^1.2.4",
     "isbot": "^5.1.1",
+    "js-tiktoken": "^1.0.12",
     "next-themes": "^0.3.0",
+    "openai": "^4.52.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12",
